app/device.tf
# nerves_hub_device

locals {
  device_app_name = "nerves_hub_device"
}

# Load Balancer
resource "aws_lb_target_group" "device_lb_tg" {
  name     = "nerves-hub-${terraform.workspace}-device-tg"
  port     = 443
  protocol = "TCP"
  target_type = "ip"
  vpc_id   = module.vpc.vpc_id

  health_check {
    healthy_threshold = 3
  }
}

resource "aws_lb" "device_lb" {
  name               = "nerves-hub-${terraform.workspace}-device-lb"
  internal           = false
  load_balancer_type = "network"
  subnets            = module.vpc.public_subnets
  tags = {
    Environment = terraform.workspace
  }
}

resource "aws_lb_listener" "device_lb_listener" {
  load_balancer_arn = "${aws_lb.device_lb.arn}"
  port              = "443"
  protocol          = "TCP"

  default_action {
    type             = "forward"
    target_group_arn = "${aws_lb_target_group.device_lb_tg.arn}"
  }
}

resource "aws_route53_record" "device_dns_record" {
  zone_id = data.aws_route53_zone.dns_zone.zone_id
  name    = terraform.workspace == "production" ? "device.${var.domain}." : "device.${terraform.workspace}.${var.domain}."
  type    = "A"

  alias {
    name                   = aws_lb.device_lb.dns_name
    zone_id                = aws_lb.device_lb.zone_id
    evaluate_target_health = false
  }

  depends_on = [
    aws_lb.device_lb
  ]
}

# SSM
resource "aws_ssm_parameter" "nerves_hub_device_ssm_secret_db_url" {
  name      = "/${local.device_app_name}/${terraform.workspace}/DATABASE_URL"
  type      = "SecureString"
  value     = "postgres://${var.db_username}:${var.db_password}@${module.web_db.endpoint}/${var.web_db_name}"
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_secret_erl_cookie" {
  name      = "/${local.device_app_name}/${terraform.workspace}/ERL_COOKIE"
  type      = "SecureString"
  value     = var.erl_cookie
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_s3_ssl_bucket" {
  name      = "/${local.device_app_name}/${terraform.workspace}/S3_SSL_BUCKET"
  type      = "String"
  value     = aws_s3_bucket.ca_application_data.bucket
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_s3_log_bucket_name" {
  name      = "/${local.device_app_name}/${terraform.workspace}/S3_LOG_BUCKET_NAME"
  type      = "String"
  value     = aws_s3_bucket.web_firmware_transfer_logs.bucket
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_app_name" {
  name      = "/${local.device_app_name}/${terraform.workspace}/APP_NAME"
  type      = "String"
  value     = "${local.device_app_name}"
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_cluster" {
  name      = "/${local.device_app_name}/${terraform.workspace}/CLUSTER"
  type      = "String"
  value     = terraform.workspace == "production" ? "nerves-hub" : "nerves-hub-${terraform.workspace}"
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_aws_region" {
  name      = "/${local.device_app_name}/${terraform.workspace}/AWS_REGION"
  type      = "String"
  value     = var.region
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_port" {
  name      = "/${local.device_app_name}/${terraform.workspace}/PORT"
  type      = "String"
  value     = 80
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_host" {
  name      = "/${local.device_app_name}/${terraform.workspace}/HOST"
  type      = "String"
  value     = "device.${terraform.workspace}.${var.domain}"
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_s3_bucket_name" {
  name      = "/${local.device_app_name}/${terraform.workspace}/S3_BUCKET_NAME"
  type      = "String"
  value     = aws_s3_bucket.web_application_data.bucket
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_secret_secret_key_base" {
  name      = "/${local.device_app_name}/${terraform.workspace}/SECRET_KEY_BASE"
  type      = "SecureString"
  value     = var.web_secret_key_base
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_ses_port" {
  name      = "/${local.device_app_name}/${terraform.workspace}/SES_PORT"
  type      = "String"
  value     = "587"
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_ses_server" {
  name      = "/${local.device_app_name}/${terraform.workspace}/SES_SERVER"
  type      = "String"
  value     = "email-smtp.${var.region}.amazonaws.com"
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_smtp_username" {
  name      = "/${local.device_app_name}/${terraform.workspace}/SMTP_USERNAME"
  type      = "SecureString"
  value     = var.web_smtp_password
  overwrite = true
}

resource "aws_ssm_parameter" "nerves_hub_device_ssm_secret_smtp_password" {
  name      = "/${local.device_app_name}/${terraform.workspace}/SMTP_PASSWORD"
  type      = "SecureString"
  value     = var.web_smtp_username
  overwrite = true
}

# Roles
## Task role
resource "aws_iam_role" "device_task_role" {
  name = "nerves-hub-${terraform.workspace}-device-role"

  assume_role_policy = <<EOF
{
   "Version": "2012-10-17",
   "Statement": [
     {
       "Sid": "",
       "Effect": "Allow",
       "Principal": {
         "Service": "ecs-tasks.amazonaws.com"
       },
       "Action": "sts:AssumeRole"
     }
  ]
}
EOF

}

data "aws_iam_policy_document" "device_iam_policy" {
  statement {
    sid = "1"

    actions = [
      "ssm:DescribeParameters",
    ]

    resources = [
      "*",
    ]
  }

  statement {
    actions = [
      "ssm:GetParameters",
      "ssm:GetParametersByPath",
    ]

    resources = [
      "arn:aws:ssm:${var.region}:${data.aws_caller_identity.current.account_id}:parameter/${local.device_app_name}/${terraform.workspace}*"
    ]
  }

  statement {
    actions = [
      "s3:ListBucket",
    ]

    resources = [
      "arn:aws:s3:::${aws_s3_bucket.web_application_data.bucket}",
      "arn:aws:s3:::${aws_s3_bucket.ca_application_data.bucket}"
    ]
  }

  statement {
    actions = [
      "s3:DeleteObject",
      "s3:GetObject",
      "s3:GetObjectAcl",
      "s3:GetObjectTagging",
      "s3:GetObjectTorrent",
      "s3:GetObjectVersion",
      "s3:GetObjectVersionAcl",
      "s3:GetObjectVersionForReplication",
      "s3:GetObjectVersionTagging",
      "s3:GetObjectVersionTorrent",
      "s3:PutObject",
      "s3:PutObjectAcl",
      "s3:PutObjectTagging",
      "s3:PutObjectVersionAcl",
      "s3:PutObjectVersionTagging",
    ]

    resources = [
      "arn:aws:s3:::${aws_s3_bucket.web_application_data.bucket}/*"
    ]
  }

  statement {
    actions = [
      "s3:GetObject",
      "s3:GetObjectAcl",
      "s3:GetObjectTagging",
      "s3:GetObjectTorrent",
      "s3:GetObjectVersion",
      "s3:GetObjectVersionAcl",
      "s3:GetObjectVersionForReplication",
      "s3:GetObjectVersionTagging",
      "s3:GetObjectVersionTorrent"
    ]

    resources = [
      "arn:aws:s3:::${aws_s3_bucket.ca_application_data.bucket}/ssl/*"
    ]
  }

  statement {
    actions = [
      "kms:Decrypt",
    ]

    resources = [
      aws_kms_key.app_enc_key.arn,
    ]
  }

  statement {
    actions = [
      "ecs:DeregisterContainerInstance",
      "ecs:DiscoverPollEndpoint",
      "ecs:Poll",
      "ecs:RegisterContainerInstance",
      "ecs:StartTelemetrySession",
      "ecs:UpdateContainerInstancesState",
      "ecs:Submit*",
      "ecr:GetAuthorizationToken",
      "ecr:BatchCheckLayerAvailability",
      "ecr:GetDownloadUrlForLayer",
      "ecr:BatchGetImage",
      "logs:CreateLogStream",
      "logs:PutLogEvents",
      "ecs:RegisterContainerInstance",
      "ecs:DeregisterContainerInstance",
      "ecs:DiscoverPollEndpoint",
      "ecs:StartTask",
      "ecs:ListTasks",
      "ecs:ListServices",
      "ecs:DescribeServices",
      "ecs:DescribeTasks",
      "logs:CreateLogGroup",
      "logs:CreateLogStream",
      "logs:PutLogEvents",
      "logs:DescribeLogStreams",
    ]

    resources = [
      "*",
    ]
  }
}

resource "aws_iam_policy" "device_task_policy" {
  name = "nerves-hub-${terraform.workspace}-device-task-policy"
  policy = data.aws_iam_policy_document.device_iam_policy.json
}

resource "aws_iam_role_policy_attachment" "device_role_policy_attach" {
  role = aws_iam_role.device_task_role.name
  policy_arn = aws_iam_policy.device_task_policy.arn
}

# ECS
resource "aws_ecs_task_definition" "device_task_definition" {
  family = "nerves-hub-${terraform.workspace}-device"
  task_role_arn = aws_iam_role.device_task_role.arn
  execution_role_arn = aws_iam_role.ecs_tasks_execution_role.arn

  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu = "256"
  memory = "512"

  container_definitions = <<DEFINITION
   [
     {
       "portMappings": [
         {
           "hostPort": 443,
           "protocol": "tcp",
           "containerPort": 443
         }
       ],
       "networkMode": "awsvpc",
       "image": "${var.device_image}",
       "essential": true,
       "privileged": false,
       "name": "${local.device_app_name}",
       "environment": [
         {
           "name": "ENVIRONMENT",
           "value": "${terraform.workspace}"
         },
         {
           "name": "APP_NAME",
           "value": "${local.device_app_name}"
         }
       ],
       "logConfiguration": {
         "logDriver": "awslogs",
         "options": {
           "awslogs-region": "${var.region}",
           "awslogs-group": "${module.ecs_cluster.log_group}",
           "awslogs-stream-prefix": "${local.device_app_name}"
         }
       }
     }
   ]

DEFINITION

}

resource "aws_ecs_service" "device_ecs_service" {
  name    = "nerves-hub-device"
  cluster = module.ecs_cluster.arn

  # this needs to be toggled on to update anything in the task besides container (e.g. CPU, memory, etc)
  # task_definition = "${aws_ecs_task_definition.ca_task_definition.family}:${max("${aws_ecs_task_definition.ca_task_definition.revision}", "${data.aws_ecs_task_definition.ca_task_definition.revision}")}"
  # task_definition = "${aws_ecs_task_definition.ca_task_definition.family}:${aws_ecs_task_definition.ca_task_definition.revision}"

  task_definition = aws_ecs_task_definition.device_task_definition.arn
  desired_count   = var.device_service_desired_count

  deployment_minimum_healthy_percent = "100"
  deployment_maximum_percent         = "200"
  launch_type = "FARGATE"

  health_check_grace_period_seconds = 600

  load_balancer {
    target_group_arn = aws_lb_target_group.device_lb_tg.arn
    container_name = "${local.device_app_name}"
    container_port = 443
  }

  network_configuration {
    security_groups = [aws_security_group.web_security_group.id]
    subnets         = module.vpc.private_subnets
  }

  # After the first setup, we want to ignore this so deploys aren't reverted
  lifecycle {
    ignore_changes = [task_definition] # create_before_destroy = true
  }

  depends_on      = [
    aws_iam_role.device_task_role,
    aws_lb_listener.device_lb_listener
  ]
}
